--- a/webviews/newpage.html
+++ b/webviews/newpage.html
@@ -12,7 +12,8 @@
 <body>
     <h1>New Page</h1>
     <br>
-    <img src="./img/img1.jpeg">
+    <img src="../img/img1.jpeg">
+    
 </body>
 
 </html>
